[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearspark"
version = "0.1.0"
description = "A curated collection of essential PySpark functions for daily data engineering. Featuring quality-of-life enhancements for DataFrames."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Seu Nome", email = "seu.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/clearspark"]
