[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearspark"
version = "0.2.0"
description = "A curated collection of essential PySpark functions for daily data engineering."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["pyspark", "data-engineering", "dataframe", "etl", "spark-utils"]
authors = [
    {name = "Vinicius", email = "vinnyuniverso3@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/clearspark"]


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
